// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonContainer should add an active class if in the active array 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    active={
        Array [
            "People",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          category="People"
          className="category-button active"
          favorites={undefined}
          getData={undefined}
/>,
        <Unknown
          category="Planets"
          className="category-button"
          favorites={undefined}
          getData={undefined}
/>,
        <Unknown
          category="Vehicles"
          className="category-button"
          favorites={undefined}
          getData={undefined}
/>,
        <Unknown
          category="Favorites"
          className="category-button"
          favorites={undefined}
          getData={undefined}
/>,
      ],
      "className": "button-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "category": "People",
          "className": "category-button active",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "category": "Planets",
          "className": "category-button",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "category": "Vehicles",
          "className": "category-button",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "category": "Favorites",
          "className": "category-button",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            category="People"
            className="category-button active"
            favorites={undefined}
            getData={undefined}
/>,
          <Unknown
            category="Planets"
            className="category-button"
            favorites={undefined}
            getData={undefined}
/>,
          <Unknown
            category="Vehicles"
            className="category-button"
            favorites={undefined}
            getData={undefined}
/>,
          <Unknown
            category="Favorites"
            className="category-button"
            favorites={undefined}
            getData={undefined}
/>,
        ],
        "className": "button-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "category": "People",
            "className": "category-button active",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "category": "Planets",
            "className": "category-button",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "category": "Vehicles",
            "className": "category-button",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "category": "Favorites",
            "className": "category-button",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ButtonContainer should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    active={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          category="People"
          className="category-button"
          favorites={undefined}
          getData={undefined}
/>,
        <Unknown
          category="Planets"
          className="category-button"
          favorites={undefined}
          getData={undefined}
/>,
        <Unknown
          category="Vehicles"
          className="category-button"
          favorites={undefined}
          getData={undefined}
/>,
        <Unknown
          category="Favorites"
          className="category-button"
          favorites={undefined}
          getData={undefined}
/>,
      ],
      "className": "button-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "category": "People",
          "className": "category-button",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "category": "Planets",
          "className": "category-button",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "category": "Vehicles",
          "className": "category-button",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "category": "Favorites",
          "className": "category-button",
          "favorites": undefined,
          "getData": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            category="People"
            className="category-button"
            favorites={undefined}
            getData={undefined}
/>,
          <Unknown
            category="Planets"
            className="category-button"
            favorites={undefined}
            getData={undefined}
/>,
          <Unknown
            category="Vehicles"
            className="category-button"
            favorites={undefined}
            getData={undefined}
/>,
          <Unknown
            category="Favorites"
            className="category-button"
            favorites={undefined}
            getData={undefined}
/>,
        ],
        "className": "button-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "category": "People",
            "className": "category-button",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "category": "Planets",
            "className": "category-button",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "category": "Vehicles",
            "className": "category-button",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "category": "Favorites",
            "className": "category-button",
            "favorites": undefined,
            "getData": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
